--- a/dev/oms/src/components/app/app.css
+++ b/dev/oms/src/components/app/app.css
@@ -10,13 +10,9 @@
   height: 150px;
   padding: 20px;
   color: white; }
-  .App-header h2 {
-    color: green;
-    transform: translateX(20px); }
 
 .App-intro {
-  font-size: large;
-  font-color: red; }
+  font-size: large; }
 
 @keyframes App-logo-spin {
   from {
