--- a/dev/react/src/scss/base/general.css
+++ b/dev/react/src/scss/base/general.css
@@ -281,6 +281,9 @@ ul {
 p {
   line-height: 1em; }
 
+.sticky-breadcrumb {
+  z-index: 1; }
+
 .mog-breadcrumb {
   background-color: #212937;
   color: #fff;
@@ -406,7 +409,8 @@ p {
 
 .left-panel,
 .right-panel {
-  padding: 30px; }
+  padding: 30px;
+  z-index: -1; }
   @media (min-width: 992px) {
     .left-panel,
     .right-panel {
