--- a/dev/react/src/scss/components/header.css
+++ b/dev/react/src/scss/components/header.css
@@ -56,6 +56,11 @@
 .nav-container {
   padding: 20px 30px;
   position: relative; }
+  .nav-container .ion-ios-search {
+    font-size: 2em;
+    opacity: 0.5;
+    padding-top: 7px;
+    position: absolute; }
   .nav-container .search {
     display: inline-block;
     width: 70%;
@@ -88,36 +93,36 @@
   .burger i {
     position: relative;
     display: inline-block;
-    width: 17px;
+    width: 23px;
     height: 2px;
     top: -3px;
     color: #212937;
     font: bold 14px/.4 Helvetica;
     text-transform: uppercase;
     text-indent: -55px;
-    background: #212937;
+    background: #ccc;
     transition: all .2s ease-out; }
     @media (min-width: 768px) {
       .burger i {
         top: -5px;
-        background: #222222; } }
+        background: #a4a8ab; } }
     @media (min-width: 992px) {
       .burger i {
-        width: 21px; } }
+        width: 23px; } }
     .burger i:before, .burger i:after {
       content: '';
       height: 2px;
-      background: #212937;
+      background: #a4a8ab;
       position: absolute;
       left: 0;
       transition: all .2s ease-out;
-      width: 17px; }
+      width: 23px; }
       @media (min-width: 768px) {
         .burger i:before, .burger i:after {
-          background: #222222; } }
+          background: #a4a8ab; } }
       @media (min-width: 992px) {
         .burger i:before, .burger i:after {
-          width: 21px; } }
+          width: 23px; } }
     .burger i:before {
       top: -6px; }
     .burger i:after {
@@ -135,3 +140,48 @@
     .burger.-in i:after {
       bottom: 0;
       transform: rotateZ(-45deg); }
+
+.react-tagsinput {
+  background-color: #fff;
+  overflow: hidden;
+  padding-left: 35px;
+  padding-top: 5px; }
+
+.react-tagsinput--focused {
+  border-color: #a5d24a; }
+
+.react-tagsinput-tag {
+  background-color: #444a5a;
+  border-radius: 4px;
+  color: #fff;
+  display: inline-block;
+  font-size: 1.1em;
+  font-weight: 400;
+  margin-bottom: 5px;
+  margin-right: 5px;
+  padding: 8px; }
+
+.react-tagsinput-remove {
+  cursor: pointer;
+  font-weight: bold; }
+
+.react-tagsinput-tag a::before {
+  font-family: "Ionicons";
+  content: "\f12a";
+  color: #fff;
+  font-size: 0.7em;
+  margin-left: 1em;
+  margin-right: 0.3em; }
+
+.react-tagsinput-input {
+  background: transparent;
+  border: 0;
+  color: #777;
+  font-family: sans-serif;
+  font-size: 1.1em;
+  line-height: 1.5em;
+  font-weight: 400;
+  margin-top: 3px;
+  outline: none;
+  padding: 5px;
+  width: 300px; }
