--- a/dev/react/src/scss/components/header.scss
+++ b/dev/react/src/scss/components/header.scss
@@ -4,6 +4,12 @@
   padding:20px 30px;
   position: relative;
 
+  .ion-ios-search {
+    font-size: 2em;
+    opacity: 0.5;
+    padding-top: 7px;
+    position: absolute;
+  }
 
   .search{
     display: inline-block;
@@ -46,39 +52,39 @@
   i {
     position: relative;
     display: inline-block;
-    width: 17px;
+    width: 23px;
     height: 2px;
     top:-3px;
     color:$colour-primary;
     font:bold 14px/.4 Helvetica;
     text-transform: uppercase;
     text-indent:-55px;
-    background: $colour-primary;
+    background: #ccc;
     transition: all .2s ease-out;
 
     @include sm{
       top:-5px;
-      background: $colour-text;
+      background: #a4a8ab;
     }
     @include md{
-      width:21px;
+      width:23px;
     }
 
     &:before, &:after {
       content:'';
       height: 2px;
-      background:$colour-primary;
+      background:#a4a8ab;
       position: absolute;
       left:0;
       transition: all .2s ease-out;
-      width: 17px;
+      width: 23px;
 
       @include sm{
-        background: $colour-text;
+        background: #a4a8ab;
       }
 
       @include md{
-        width: 21px;
+        width: 23px;
       }
     }
 
@@ -114,4 +120,61 @@
       transform:rotateZ(-45deg);
     }
   }
+}
+
+
+
+
+// search input
+.react-tagsinput {
+  background-color: #fff;
+  //border: 1px solid #ccc;
+  overflow: hidden;
+  padding-left: 35px;
+  padding-top: 5px;
+}
+
+.react-tagsinput--focused {
+  border-color: #a5d24a;
+}
+
+.react-tagsinput-tag {
+  background-color: #444a5a;
+  border-radius: 4px;
+  //border: 1px solid #a5d24a;
+  color: #fff;
+  display: inline-block;
+  font-size: 1.1em;
+  font-weight: 400;
+  margin-bottom: 5px;
+  margin-right: 5px;
+  padding: 8px;
+}
+
+.react-tagsinput-remove {
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.react-tagsinput-tag a::before {
+  font-family: "Ionicons";
+  content: "\f12a";
+  color: #fff;
+  font-size: 0.7em;
+  margin-left: 1em;
+  margin-right: 0.3em;
+}
+
+.react-tagsinput-input {
+  background: transparent;
+  border: 0;
+  color: #777;
+  font-family: sans-serif;
+  font-size: 1.1em;
+  line-height: 1.5em;
+  font-weight: 400;
+  margin-top: 3px;
+  outline: none;
+  padding: 5px;
+  width: 300px;
 }
