add hover and click event handlers to the fraudCheckListItem component amongst other things. The hover event will trigger an API call to load the relevant order details

--- a/dev/react/src/scss/components/fraudCheckListItem.css
+++ b/dev/react/src/scss/components/fraudCheckListItem.css
@@ -1,6 +1,8 @@
+#root .fraudCheckOverview .fraudCheckListItem {
+  padding: 4%; }
+
 .fraudCheckListItem {
   border: 1px solid #e8e9e9;
-  padding: 4%;
   display: table-cell;
   vertical-align: middle;
   box-sizing: border-box; }
