--- a/dev/react/src/scss/components/fraudCheckListItem.scss
+++ b/dev/react/src/scss/components/fraudCheckListItem.scss
@@ -1,8 +1,11 @@
 @import '../customBase/variables.scss';
 
+#root .fraudCheckOverview .fraudCheckListItem {
+  padding: 4%;
+}
+
 .fraudCheckListItem {
   border: 1px solid #e8e9e9;
-  padding: 4%;
   display: table-cell;
   vertical-align: middle;
   box-sizing: border-box;
