--- a/dev/react/src/scss/base/general.scss
+++ b/dev/react/src/scss/base/general.scss
@@ -3,45 +3,8 @@
 @import "./4_global.scss";
 
 
-.sticky-breadcrumb {
+.sticky-bar {
   z-index: 1;
-}
-
-.mog-breadcrumb{
-  background-color: $colour-primary;
-  color: #fff;
-  padding:20px 30px;
-  position: relative;
-  z-index: layer('breadcrumb');
-
-  a {
-    color:#777b85;
-  }
-
-  li.active a {
-    color: #fff;
-  }
-
-  ul{
-    @include vertical-align;
-    position: absolute;
-    left:30px;
-
-    li{
-      &:before{
-        content:"\f3d3";
-        font-family:"Ionicons";
-        padding-right:15px;
-        color:#777b85;
-      }
-
-      &:first-child{
-        &:before{
-          display: none;
-        }
-      }
-    }
-  }
 }
 
 .sub-text{
