--- a/dev/react/src/scss/components/breadcrumbs.scss
+++ b/dev/react/src/scss/components/breadcrumbs.scss
@@ -1,5 +1,44 @@
+@import "../base/1_vars.scss";
+@import "../base/2_mixins.scss";
+@import "../base/4_global.scss";
+
 .search-results {
   font-size: 2em;
   line-height: 1.7em;
-  letter-spacing: -0.5pt;
+  letter-spacing: -0.5pt; }
+
+.sticky-bar {
+  z-index: 1;
+}
+
+.mog-breadcrumb{
+
+  a {
+    color:#777b85;
+  }
+
+  li.active a {
+    color: #fff;
+  }
+
+  ul{
+    @include vertical-align;
+    position: absolute;
+    left:30px;
+
+    li{
+      &:before{
+        content:"\f3d3";
+        font-family:"Ionicons";
+        padding-right:15px;
+        color:#777b85;
+      }
+
+      &:first-child{
+        &:before{
+          display: none;
+        }
+      }
+    }
+  }
 }
