--- a/dev/react/src/scss/components/fraudCheckOverview.css
+++ b/dev/react/src/scss/components/fraudCheckOverview.css
@@ -1,5 +1,5 @@
-.fraudCheckOverview .right-panel {
-  border-left: 1px solid #e8e9e9; }
+.fraudCheckOverview .left-panel {
+  border-right: 1px solid #e8e9e9; }
 
 .fraudCheckOverview .component-customer-orders .component.card {
   background: white;
