--- a/dev/react/src/scss/components/stickybar.css
+++ b/dev/react/src/scss/components/stickybar.css
@@ -287,24 +287,8 @@ p {
   letter-spacing: -0.5pt; }
 
 .sticky-bar {
-  z-index: 1; }
-
-.mog-breadcrumb a {
-  color: #777b85; }
-
-.mog-breadcrumb li.active a {
-  color: #fff; }
-
-.mog-breadcrumb ul {
+  background-color: #212937;
+  color: #fff;
+  padding: 20px 30px;
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  position: absolute;
-  left: 30px; }
-  .mog-breadcrumb ul li:before {
-    content: "\f3d3";
-    font-family: "Ionicons";
-    padding-right: 15px;
-    color: #777b85; }
-  .mog-breadcrumb ul li:first-child:before {
-    display: none; }
+  z-index: 10; }
