more progress, a new Icon component has also been reated

--- a/dev/react/src/scss/components/fraudCheckListItem.scss
+++ b/dev/react/src/scss/components/fraudCheckListItem.scss
@@ -4,6 +4,10 @@
   padding: 4%;
 }
 
+.fraudCheckListItemContain.component {
+  padding: 0
+}
+
 .fraudCheckListItem {
   border: 1px solid #e8e9e9;
   display: table-cell;
@@ -21,5 +25,33 @@
   }
 }
 
+.fraudCheckListItem-details {
+  float: left;
+}
 
+.fraudCheck-status-icons {
+  float: right;
+}
+
+.fraudCheckListItem-flagIcon {
+  border-radius: 100%;
+  border: 1px solid $color-grey-border;
+  height: 40px;
+  width: 40px;
+  display: inline-block;
+  text-align: center;
+  font-size: 32px;
+  position: relative;
+  font-size: 1.5em;
+  margin-left: 14px;
+
+    &:before {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        padding-top: 22%;
+      }
+}
 
