--- a/dev/react/src/scss/components/stickybar.scss
+++ b/dev/react/src/scss/components/stickybar.scss
@@ -15,3 +15,16 @@
   position: relative;
   z-index: layer('breadcrumb');
 }
+
+.sticky-dropdown-current {
+
+  display:inline;
+
+  &:after {
+    content: '&#8744'
+  }
+
+  &.heading1 {
+    color: white;
+  }
+}
