--- a/dev/react/src/scss/components/fraudCheckListItem.css
+++ b/dev/react/src/scss/components/fraudCheckListItem.css
@@ -1,6 +1,9 @@
 #root .fraudCheckOverview .fraudCheckListItem {
   padding: 4%; }
 
+.fraudCheckListItemContain.component {
+  padding: 0; }
+
 .fraudCheckListItem {
   border: 1px solid #e8e9e9;
   display: table-cell;
@@ -12,3 +15,28 @@
     border-left: 2px solid #fcd259; }
   .fraudCheckListItem.fraudCheck-failed {
     border-left: 2px solid #f86e61; }
+
+.fraudCheckListItem-details {
+  float: left; }
+
+.fraudCheck-status-icons {
+  float: right; }
+
+.fraudCheckListItem-flagIcon {
+  border-radius: 100%;
+  border: 1px solid #e8e9e9;
+  height: 40px;
+  width: 40px;
+  display: inline-block;
+  text-align: center;
+  font-size: 32px;
+  position: relative;
+  font-size: 1.5em;
+  margin-left: 14px; }
+  .fraudCheckListItem-flagIcon:before {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding-top: 22%; }
