--- a/dev/react/src/scss/components/stickyDropdown.scss
+++ b/dev/react/src/scss/components/stickyDropdown.scss
@@ -1,9 +1,27 @@
+@import '../customBase/variables.scss';
+@import '../base/1_vars.scss';
+
 .sticky-dropdown {
   position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.sticky-dropdown-current {
+
+  display:inline;
+
+  &:after {
+    content: '>'
+  }
+
+  &.heading1 {
+    color: white;
+  }
 }
 
 .sticky-dropdown-overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
@@ -15,14 +33,45 @@
 
 .sticky-dropdown-list {
   position: absolute;
+  right: -50%;
   background: white;
   color: black;
   padding: 2em;
+  min-width: 230px;
+  z-index: 10;
 
   ul {
     list-style: none;
     margin: 0;
     padding: 0;
     font-size: 18px;
+
+  }
+
+  .sticky-dropdown-list-item {
+    position: relative;
+
+      &:before {
+      content: '';
+      height: 6px;
+      width: 6px;
+      display: inline-block;
+      border-radius: 100%;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: -12px;
+      margin: auto;
+    }
+
+    &.sticky-item-pending:before {
+      background-color: $color-grey-border;
+    }
+    &.sticky-item-contacted:before {
+      background-color: $color-yellow;
+    }
+    &.sticky-item-rejected:before {
+      background-color: $color-red;
+    }
   }
 }
