--- a/dev/react/src/scss/base/components.css
+++ b/dev/react/src/scss/base/components.css
@@ -285,7 +285,21 @@ p {
   position: relative;
   padding: 5% 0;
   display: inline-block;
-  width: 100%; }
+  width: 100%;
+  cursor: pointer; }
+  .component.loads:before {
+    content: "";
+    position: absolute;
+    display: block;
+    height: 5px;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    background: #f0f0f0;
+    border-top: 1px solid #ddd;
+    transition: width 1s; }
+  .component.loads:hover:before {
+    width: 100%; }
   .component .actions {
     position: absolute;
     top: 10px;
