--- a/dev/react/src/scss/base/components.scss
+++ b/dev/react/src/scss/base/components.scss
@@ -7,6 +7,28 @@
   padding:5% 0;
   display: inline-block;
   width:100%;
+  cursor:pointer;
+
+  &.loads{
+    &:before{
+      content:"";
+      position:absolute;
+      display: block;
+      height:5px;
+      bottom:0;
+      left:0;
+      width:0;
+      background: #f0f0f0;
+      border-top:1px solid #ddd;
+      transition: width 1s;
+    }
+
+    &:hover{
+      &:before{
+        width:100%;
+      }
+    }
+  }
 
   .actions{
     position: absolute;
