--- a/dev/react/src/scss/base/general.css
+++ b/dev/react/src/scss/base/general.css
@@ -284,6 +284,9 @@ p {
 .sticky-bar {
   z-index: 1; }
 
+.ReactModal__Overlay {
+  z-index: 2; }
+
 .sub-text {
   color: #979797;
   font-weight: 300; }
@@ -436,7 +439,22 @@ p {
         height: calc(100vh - 100px); } }
 
 .right-panel {
-  display: none; }
+  display: none;
+  position: relative; }
+  .right-panel:after {
+    content: "";
+    background: rgba(255, 255, 255, 0.8);
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 50%;
+    bottom: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .5s; }
+  .right-panel.-loading:after {
+    visibility: visible;
+    opacity: 1; }
   @media (min-width: 992px) {
     .right-panel {
       display: inline-block !important; }
