--- a/dev/react/src/scss/base/general.scss
+++ b/dev/react/src/scss/base/general.scss
@@ -7,6 +7,10 @@
   z-index: 1;
 }
 
+.ReactModal__Overlay {
+  z-index: 2;
+}
+
 .sub-text{
   color:$colour-text-secondary;
   @extend .f18;
@@ -97,6 +101,27 @@
 
 .right-panel{
   display: none;
+  position:relative;
+
+  &:after{
+    content:"";
+    background:rgba(255,255,255,.8);
+    position:fixed;
+    top:0;
+    right:0;
+    left:50%;
+    bottom:0;
+    opacity:0;
+    visibility: hidden;
+    transition:all .5s;
+  }
+
+  &.-loading{
+    &:after{
+      visibility: visible;
+      opacity:1;
+    }
+  }
 
   @include md{
     display: inline-block !important;
