--- a/dev/react/src/scss/components/fraudCheckOverview.css
+++ b/dev/react/src/scss/components/fraudCheckOverview.css
@@ -4,3 +4,14 @@
 .fraudCheckOverview .component-customer-orders .component.card {
   background: white;
   border: 1px solid #e8e9e9; }
+
+.fraudCheckOverview-order.right-panel.cust-scroll {
+  padding-left: 0;
+  padding-right: 0;
+  padding-bottom: 0; }
+  .fraudCheckOverview-order.right-panel.cust-scroll .fraudCheckOverview-right-inner {
+    padding-left: 3%;
+    padding-right: 3%; }
+  .fraudCheckOverview-order.right-panel.cust-scroll .sticky-actions {
+    position: sticky;
+    bottom: 0; }
