--- a/dev/react/src/scss/base/1_vars.scss
+++ b/dev/react/src/scss/base/1_vars.scss
@@ -56,7 +56,7 @@ $font-weights: (
 $layers: (
         'breadcrumb': 10,
         'veil' : 20,
-        'sticky-dropdown': 10
+        'stickyDropdown': 10
 );
 
 $colours: (
