some styling changes but mainly adding in as much of the pagination functionality as possible at this stage

--- a/dev/react/src/scss/base/1_vars.scss
+++ b/dev/react/src/scss/base/1_vars.scss
@@ -70,7 +70,8 @@ $colours: (
         'blue': (
                 'base': #212937,
                 'muted-primary': #444a5a,
-                'link': #1d71d5
+                'link': #1d71d5,
+                'btn-blue': #2671d4
         ),
         'prescription' : (
                 'red':#fdd3cf,
