--- a/dev/react/src/scss/base/5_helper.css
+++ b/dev/react/src/scss/base/5_helper.css
@@ -358,6 +358,12 @@
 .bg-colour-link-blue {
   background-color: #1d71d5; }
 
+.colour-btn-blue-blue {
+  color: #2671d4; }
+
+.bg-colour-btn-blue-blue {
+  background-color: #2671d4; }
+
 .colour-red-prescription {
   color: #fdd3cf; }
 
