--- a/dev/react/src/scss/components/stickyActions.css
+++ b/dev/react/src/scss/components/stickyActions.css
@@ -18,9 +18,9 @@
 
 .button {
   box-sizing: border-box;
-  border-radius: 3px;
+  border-radius: 5px;
   text-align: center; }
 
 .btn-approve {
-  background-color: #5de1c8;
-  border-color: #5de1c8; }
+  background-color: #2671d4;
+  border-color: #2671d4; }
