--- a/dev/react/src/scss/components/stickyActions.css
+++ b/dev/react/src/scss/components/stickyActions.css
@@ -4,6 +4,8 @@
   width: 100%;
   overflow: hidden;
   border-top: 1px solid #e8e9e9; }
+  .sticky-actions .stickyActions-details {
+    float: left; }
   .sticky-actions .sticky-bottom {
     bottom: 0;
     width: 100%; }
