--- a/dev/react/src/scss/components/stickyDropdown.scss
+++ b/dev/react/src/scss/components/stickyDropdown.scss
@@ -1,5 +1,6 @@
 @import '../customBase/variables.scss';
 @import '../base/1_vars.scss';
+@import '../base/2_mixins.scss';
 
 .sticky-dropdown {
   position: relative;
@@ -10,6 +11,7 @@
 .sticky-dropdown-current {
 
   display:inline;
+  @include responsive-font(12px,40px);
 
   &:after {
     font-family: "Ionicons";
