--- a/dev/react/src/scss/components/fraudCheckOverview.css
+++ b/dev/react/src/scss/components/fraudCheckOverview.css
@@ -11,3 +11,13 @@
   .fraudCheckOverview-order.right-panel.cust-scroll .sticky-actions {
     position: sticky;
     bottom: 0; }
+  .fraudCheckOverview-order.right-panel.cust-scroll .fraudCheckOverview-overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    height: 100%;
+    width: 50%;
+    background: rgba(33, 41, 55, 0.8);
+    z-index: 1;
+    margin: auto; }
