--- a/dev/react/src/scss/components/fraudCheckListItem.scss
+++ b/dev/react/src/scss/components/fraudCheckListItem.scss
@@ -17,11 +17,14 @@
   &.fraudCheck-passed {
     border-left: 2px solid $color-green;
   }
-  &.fraudCheck-maybe {
+  &.fraudCheck-contacted {
     border-left: 2px solid $color-yellow;
   }
   &.fraudCheck-failed {
     border-left: 2px solid $color-red;
+  }
+  &.fraudCheck-pending {
+    border-left: 2px solid $color-grey-border;
   }
 }
 
