--- a/dev/react/src/scss/components/fraudCheckOverview.css
+++ b/dev/react/src/scss/components/fraudCheckOverview.css
@@ -9,7 +9,9 @@
     padding-left: 3%;
     padding-right: 3%; }
   .fraudCheckOverview-order.right-panel.cust-scroll .sticky-actions {
-    position: sticky;
+    position: fixed;
+    width: 50%;
+    left: 50%;
     bottom: 0; }
   .fraudCheckOverview-order.right-panel.cust-scroll .fraudCheckOverview-overlay {
     position: fixed;
