--- a/dev/react/src/scss/components/fraudCheckOverview.scss
+++ b/dev/react/src/scss/components/fraudCheckOverview.scss
@@ -14,7 +14,9 @@
     padding-right: 3%;
   }
   .sticky-actions {
-    position: sticky;
+    position: fixed;
+    width: 50%;
+    left: 50%;
     bottom: 0;
   }
 
