fix various issues raised on review

--- a/dev/react/src/scss/base/1_vars.scss
+++ b/dev/react/src/scss/base/1_vars.scss
@@ -89,3 +89,4 @@ $colour-text-secondary: #979797;
 $colour-placeholder: lighten(#222222, 40%);
 $colour-primary: #212937;
 $colour-secondary: #f4b400;
+$colour-grey-icons: #4a4a4a;
