--- a/dev/react/src/scss/components/fraudCheckListItem.scss
+++ b/dev/react/src/scss/components/fraudCheckListItem.scss
@@ -1,4 +1,5 @@
 @import '../customBase/variables.scss';
+@import '../base/1_vars.scss';
 
 #root .fraudCheckOverview .fraudCheckListItem {
   padding: 4%;
@@ -54,7 +55,8 @@
         bottom: 0;
         left: 0;
         right: 0;
-        padding-top: 22%;
+        padding-top: 24%;
+        color: $colour-grey-icons;
       }
 }
 
