--- a/dev/react/src/scss/components/stickyActions.scss
+++ b/dev/react/src/scss/components/stickyActions.scss
@@ -66,7 +66,7 @@ $approveColor : map-get(map-get($colours, 'blue'), 'btn-blue');
     }
 
     .stickyActions-form {
-      top: -388px;
+      top: -206px;
       height: auto;
     }
 
@@ -88,7 +88,8 @@ $approveColor : map-get(map-get($colours, 'blue'), 'btn-blue');
   }
 
   .stickActions-comment {
-    height: 258px;
+    height: auto;
+    resize: none;
   }
 
   & .sticky-bottom {
