--- a/dev/react/src/scss/components/stickyDropdown.css
+++ b/dev/react/src/scss/components/stickyDropdown.css
@@ -71,7 +71,7 @@
   .sticky-dropdown-current:after {
     font-family: "Ionicons";
     position: absolute;
-    content: "\f123";
+    content: "\f3d0";
     right: -35px;
     top: 2px; }
   .sticky-dropdown-current.heading1 {
@@ -92,21 +92,20 @@
   left: 100%;
   background: white;
   color: black;
-  padding: 2em;
-  min-width: 230px;
+  padding: 24px 24px 12px 24px;
+  min-width: 300px;
   z-index: 10; }
   .sticky-dropdown-list ul {
     list-style: none;
     margin: 0;
-    padding: 0;
-    font-size: 18px; }
+    padding: 0; }
   .sticky-dropdown-list .sticky-dropdown-list-item {
+    margin: 0 0 12px 12px;
     position: relative; }
     .sticky-dropdown-list .sticky-dropdown-list-item:before {
       content: '';
       height: 6px;
       width: 6px;
-      display: inline-block;
       border-radius: 100%;
       position: absolute;
       top: 0;
