--- a/dev/react/src/scss/components/stickyDropdown.scss
+++ b/dev/react/src/scss/components/stickyDropdown.scss
@@ -16,7 +16,7 @@
   &:after {
     font-family: "Ionicons";
     position: absolute;
-    content: "\f123";
+    content: "\f3d0";
     right: -35px;
     top: 2px;
   }
@@ -42,26 +42,25 @@
   left: 100%;
   background: white;
   color: black;
-  padding: 2em;
-  min-width: 230px;
+  padding: 24px 24px 12px 24px;
+  min-width: 300px;
   z-index: 10;
 
   ul {
     list-style: none;
     margin: 0;
     padding: 0;
-    font-size: 18px;
-
   }
 
   .sticky-dropdown-list-item {
-    position: relative;
 
+    margin: 0 0 12px 12px;
+
+    position: relative;
       &:before {
       content: '';
       height: 6px;
       width: 6px;
-      display: inline-block;
       border-radius: 100%;
       position: absolute;
       top: 0;
