--- a/dev/react/src/scss/components/fraudCheckListItem.scss
+++ b/dev/react/src/scss/components/fraudCheckListItem.scss
@@ -47,7 +47,7 @@
   font-size: 32px;
   position: relative;
   font-size: 1.5em;
-  margin-left: 14px;
+  margin: 2px 0 0 14px;
 
     &:before {
         position: absolute;
@@ -55,7 +55,7 @@
         bottom: 0;
         left: 0;
         right: 0;
-        padding-top: 24%;
+        padding-top: 22%;
         color: $colour-grey-icons;
       }
 }
