hotkeys started. Need to investigate different keys for each action

--- a/dev/react/src/scss/components/fraudCheckListItem.css
+++ b/dev/react/src/scss/components/fraudCheckListItem.css
@@ -22,7 +22,8 @@
   float: left; }
 
 .fraudCheck-status-icons {
-  float: right; }
+  float: right;
+  line-height: 0; }
 
 .fraudCheckListItem-flagIcon {
   border-radius: 100%;
