log in / out ready for testing

--- a/dev/react/src/scss/components/fraudCheckListItem.css
+++ b/dev/react/src/scss/components/fraudCheckListItem.css
@@ -20,6 +20,8 @@
 
 .fraudCheckListItem-details {
   float: left; }
+  .fraudCheckListItem-details a {
+    color: inherit; }
 
 .fraudCheck-status-icons {
   float: right;
