--- a/dev/react/src/scss/components/header.scss
+++ b/dev/react/src/scss/components/header.scss
@@ -179,3 +179,14 @@
   padding: 5px;
   width: 300px;
 }
+
+.temp-nav {
+
+  position: absolute;
+  z-index: 99;
+  right: 0;
+
+  li {
+    display: inline-block;
+  }
+}
