--- a/dev/react/src/scss/customBase/variables.scss
+++ b/dev/react/src/scss/customBase/variables.scss
@@ -1,8 +1,7 @@
 $color-green: #34d9ba;
 $color-yellow: #fcd259;
 $color-red: #f86e61;
+$color-purple: #644c73;
 $color-grey-border: #e8e9e9;
 $color-btn-green: #5de1c8;
 $color-btn-red: #f86e61;
-
-$color-red: #f86e61;
