--- a/dev/react/src/scss/components/orderList.css
+++ b/dev/react/src/scss/components/orderList.css
@@ -22,6 +22,8 @@
   float: left; }
   .orderListItem-details a {
     color: inherit; }
+  .orderListItem-details .heading2 {
+    margin-bottom: 4px; }
 
 .orderList-status-icons {
   float: right;
