--- a/dev/react/src/scss/base/forms.scss
+++ b/dev/react/src/scss/base/forms.scss
@@ -1,8 +1,20 @@
+@import "../customBase/variables.scss";
 @import "./1_vars.scss";
 @import "./2_mixins.scss";
 @import "./4_global.scss";
 
-.form-control, .selectric-wrapper .label{
+$labelColour : map-get(map-get($colours, 'blue'), 'label');
+$formBorderColour: map-get(map-get($colours, 'grey'), 'form-border');
+
+.form-element {
+  input
+  & label {
+    @include scale-pixels('font-size', 14px, 16px);
+    color: $labelColour
+  }
+}
+
+.form-control {
   transition:all .3s;
   -webkit-appearance: none;
   border-radius:0;
@@ -33,6 +45,11 @@
   &.valid{
     border:1px solid #ccc;
     background-image:none;
+  }
+
+  &.invalid {
+    border-color: $color-red;
+    color: $color-red;
   }
 
   @include sm{
@@ -81,18 +98,6 @@
 
 textarea.form-control{
   height:130px;
-}
-
-.selectric{
-  border:1px solid #ccc;
-
-  .label{
-    border:none;
-
-    .selectric-placeholder &{
-      color:$colour-placeholder;
-    }
-  }
 }
 
 .selectric-wrapper .label{
@@ -184,6 +189,15 @@ textarea.form-control{
 
     &:hover{
       background-color: lighten($colour-primary, 10%);
+    }
+  }
+
+  &.-blue {
+    @include custom-button($colour-blue);
+    color:#fff;
+
+    &:hover{
+      background-color: lighten($colour-blue, 10%);
     }
   }
 
