--- a/dev/react/src/scss/components/stickyActionsHomeTrial.css
+++ b/dev/react/src/scss/components/stickyActionsHomeTrial.css
@@ -1,115 +1,8 @@
-@-webkit-keyframes fade-in-out {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 0.8; } }
+.sticky-actions-homeTrial .stickyActions-form {
+  top: -320px;
+  height: 320px; }
 
-@-moz-keyframes fade-in-out {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 0.8; } }
-
-@-webkit-keyframes slide-in {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 0.8; } }
-
-@-moz-keyframes slide-in {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 0.8; } }
-
-.sticky-actions {
-  background: white; }
-  .sticky-actions .sticky-actions-overlay {
-    content: '';
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    height: 100%;
-    width: 50%;
-    background: rgba(33, 41, 55, 0.8);
-    z-index: -4;
-    margin: auto;
-    display: none;
-    -webkit-animation: fade-in-out .2s ease-in;
-    -moz-animation: fade-in-out .2s ease-in; }
-  .sticky-actions .stickyActions-form {
-    padding: 2em;
-    background: white;
-    position: absolute;
-    top: 0;
-    transition: all .3s ease-out;
-    z-index: -1;
-    overflow: hidden;
-    width: 100%; }
-    .sticky-actions .stickyActions-form .stickyActions-form-title {
-      margin-bottom: 2em;
-      text-transform: capitalize; }
-  .sticky-actions.sticky-actions-open {
-    border-top: 1px solid #e8e9e9; }
-    .sticky-actions.sticky-actions-open .sticky-actions-overlay {
-      display: block; }
-    .sticky-actions.sticky-actions-open .stickyActions-form {
-      top: -206px;
-      height: auto; }
-    .sticky-actions.sticky-actions-open .btn-cancel {
-      display: inline-block; }
-  .sticky-actions .stickyActions-details {
-    float: left; }
-  .sticky-actions .stickyActions-controls {
-    border-top: 1px solid #e8e9e9;
-    padding: 2em;
-    overflow: hidden;
-    background: white; }
-  .sticky-actions .stickyActions-comment {
-    height: auto;
-    resize: none; }
-    .sticky-actions .stickyActions-comment:focus {
-      border-color: #e8e9e9 !important; }
-  .sticky-actions .sticky-bottom {
-    bottom: 0;
-    width: 100%; }
-  .sticky-actions .button {
-    width: 120px;
-    height: 48px;
-    margin-left: 1em; }
-  .sticky-actions .stickyActions-cta {
-    float: right; }
-  .sticky-actions .btn-approve {
-    color: white; }
-  .sticky-actions .btn-cancel {
-    border: 0;
-    width: auto;
-    display: none; }
-
-.sticky-actions.sticky-actions-approve .btn-decline, .sticky-actions.sticky-actions-approve .btn-contacted {
-  visibility: hidden; }
-
-.sticky-actions.sticky-actions-decline .btn-approve {
-  display: none; }
-
-.sticky-actions.sticky-actions-decline .btn-contacted {
-  visibility: hidden; }
-
-.sticky-actions.sticky-actions-decline .btn-decline {
-  background-color: #f86e61;
-  border-color: #f86e61;
-  color: white; }
-
-.sticky-actions.sticky-actions-contact .btn-approve,
-.sticky-actions.sticky-actions-contact .btn-decline {
-  display: none; }
-
-.button {
-  box-sizing: border-box;
-  border-radius: 5px;
-  text-align: center; }
-
-.btn-approve {
-  background-color: #34d9ba;
-  border-color: #34d9ba; }
+.sticky-actions-homeTrial .button {
+  width: 120px;
+  height: 48px;
+  margin-left: 1em; }
