Home Trial sticky actions updates. Need to handle passing data around before progessing

--- a/dev/react/src/scss/components/stickyActionsHomeTrial.css
+++ b/dev/react/src/scss/components/stickyActionsHomeTrial.css
@@ -1,8 +1,20 @@
-.sticky-actions-homeTrial .stickyActions-form {
-  top: -320px;
-  height: 320px; }
+.sticky-actions-homeTrial.sticky-actions-open .stickyActions-form {
+  top: -374px; }
+
+.sticky-actions-homeTrial .updatePicker {
+  margin-bottom: 1em; }
+  .sticky-actions-homeTrial .updatePicker .updatePicker-field-wrap {
+    overflow: hidden;
+    margin-bottom: 1em; }
+  .sticky-actions-homeTrial .updatePicker .form-element {
+    float: left;
+    margin-right: 1em; }
+  .sticky-actions-homeTrial .updatePicker .updatePicker-save {
+    margin: 0;
+    background: #2671d4; }
 
 .sticky-actions-homeTrial .button {
   width: 120px;
   height: 48px;
-  margin-left: 1em; }
+  margin-left: 1em;
+  clear: both; }
