--- a/dev/react/src/scss/components/stickyActionsHomeTrial.scss
+++ b/dev/react/src/scss/components/stickyActionsHomeTrial.scss
@@ -5,14 +5,37 @@
 $approveColor : $color-green;
 
 .sticky-actions-homeTrial {
+
+  &.sticky-actions-open{
     .stickyActions-form {
-      top: -320px;
-      height: 320px;
+      top: -374px;
     }
+  }
+
+  .updatePicker {
+
+    margin-bottom: 1em;
+
+    .updatePicker-field-wrap {
+      overflow: hidden;
+      margin-bottom: 1em;
+    }
+
+    .form-element {
+      float: left;
+      margin-right: 1em;
+    }
+
+    .updatePicker-save {
+      margin: 0;
+      background: $colour-blue;
+    }
+  }
 
   .button {
     width: 120px;
     height: 48px;
     margin-left: 1em;
+    clear: both;
   }
 }
